Refactor lists, sets, and maps to not use guava